fix scrollbars

--- a/style.css
+++ b/style.css
@@ -1,13 +1,14 @@
 html {
   box-sizing: border-box;
   font-size: 16px;
+  overflow: hidden;
 }
 body {
   margin: 0;
   font-family: sans-serif;
   line-height: 1.5;
   overflow: hidden;
-
+  position: relative;
 }
 
 /* images and videos max out at full width */
